app.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-headers
spec:
  selector:
    app: go-headers
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-headers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-headers
  template:
    metadata:
      name: go-headers
      labels:
        app: go-headers
    spec:
      containers:
        - name: go-headers
          image: nitesh7775/go-headers:1.0
          ports:
            - containerPort: 8082
              name: http
