ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: goapp
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-headers
                port:
                  number: 8082
